fixed any warnings given by eslint

--- a/react-compiler.config.json
+++ b/react-compiler.config.json
@@ -1,5 +1,5 @@
 {
-  "compilationMode": "annotation",
+  "compilationMode": "all",
   "panicThreshold": "critical_errors",
   "sources": [
     "./src/**"
